Fix single runner mode

We have to pass the m_runner parameter to the runner manager,
otherwise it defaults to an empty string.

The m_runner is already correctly when we
activate the single runner mode using dbus.

BUG: 417070